Plugin de babel añadido
Se agrego @babel/plugin-transform-private-methods

Para soportar metodos privados (#log en controller)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-private-methods": "^7.28.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "morgan": "^1.10.1",
